--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:{port}/agendamento
 spring.datasource.username=root
-spring.datasource.password={password}
+spring.datasource.password=${password}
